# mafia-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-stack.yml  pyproject.toml
.github/: copilot-instructions.md
infra/: .env.example  docker-compose.yml
infra/llm/: Dockerfile  entrypoint.sh
infra/ollama/: Dockerfile  entrypoint.sh
infra/rabbitmq/: definitions.json  rabbitmq.conf
infra/vectordb/: Dockerfile  otel-collector-config.yaml
research/: ai-repo-plane.md  check_tps.py  claude-plane.md  repo-plane.md
scripts/: up-dev.sh
src/services/llm/: app.py  config.py  main.py
src/services/llm/core/: service.py
src/services/llm/schemas/: llm_schemas.py
src/services/vectordb/: seed_prompts.py
src/shared/: __init__.py  messaging.py  models.py  vectordb_client.py
tests/unit/: test_llm_service.py  test_shared_models.py
